# p2p

./: Cargo.toml  README.md  notes
src/: actions.rs  cli_opts.rs  lib.rs  listener.rs  main.rs  node.rs  server.rs  service.rs  sync_job.rs  whisper_job.rs
src/actions/: add_peer.rs  broadcast_peer.rs  connect.rs  ping.rs  return_peers.rs  send_whisper.rs  sync_peers.rs  whisper.rs
