[package]
name = "p2p"
version = "0.1.0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
futures-util = { version = "0.3", default-features = false }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.0"
once_cell = "1.5"
